<resources>
    <string name="app_name">Vaccine-Alerter-Doctor</string>
    <string name="action_settings">Settings</string>


    <!--activity_login -->
    <string name="btn_login">Login</string>

    <!---Global-->
    <string name="ok">OKAY</string>
    <string name="Retry">RETRY</string>

    <!--  Into Activity -->
    <string name="input_id">Id number</string>
    <string name="btn_continue">Continue</string>


    <!-- Vaccine names -->
    <string name="bcg">BCG (Tuberculosis)</string>
    <string name="opv">OPV (Polio)</string>
    <string name="hep_b">HEP.B (Hepatitis B)</string>
    <string name="dpt">DPT (Tuberculosis)</string>
    <string name="hib">HIB (Haemophilae Influenza B)</string>
    <string name="pneu">PNEUMOCOCCAL (Pneumonia)</string>
    <string name="rota">ROTA VIRUS (Rotavirus)</string>
    <string name="vit_a">VIT A (Vitamin A Deficiency)</string>
    <string name="measles">MEASLES </string>
    <string name="yellow">YELLOW FEVER </string>

    <string name="days">Days</string>
    <string name="date">N/A</string>
    <string name="status">N/A</string>

    <!-- navigation bar -->
    <string name="nav_log">Log Out</string>

    <!-- ChildActivity-->
    <string-array name="genders_list">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <!--cardview_child_profile -->
    <string name="child_profile">Child Profile</string>
    <!--cardview_guardian_profile -->
    <string name="guardian_profile">Guardian Profile</string>

    <!--dialog_add_vaccine -->
    <string name="add_vaccine">Select Vaccine</string>

    <!--child_layout-->
    <string name="guardian_id_hint">Guardian Id e.g 30000</string>
    <string name="first_name_hint">First Name e.g Jane</string>
    <string name="last_name_hint">Last Name e.g Doe</string>
    <string name="dob_hit">Enter Date of Birth</string>

    <!-- dialogs -->
    <string name="provide_guardian_id">Provide Guardian Id</string>
    <string name="provide_child_id">Provide Child Id</string>
    <string name="child_id_hint">Child Id</string>
    <string name="cancel">Cancel</string>

    <!-- home_activity-->
    <string name="home_check">Check Children</string>
    <string name="home_add_child">Add Child</string>
    <string name="home_edit_child">Edit Child</string>
    <string name="home_add_guardian">Add Guardian</string>
    <string name="home_edit_guardian">Edit Guardian</string>
    <string name="home_image_desc">Home Image</string>
    <string name="delete_user">Delete User</string>


</resources>
