<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view_child_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/textChildGId"
        style="@style/editText"
        android:hint="@string/guardian_id_hint"
        android:imeOptions="actionNext"
        android:drawableEnd="@drawable/ic_id"
        android:inputType="number" />

    <EditText
        android:id="@+id/textChildFName"
        style="@style/editText"
        android:hint="@string/first_name_hint"
        android:imeOptions="actionNext"
        android:drawableEnd="@drawable/ic_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/textChildLName"
        style="@style/editText"
        android:hint="@string/last_name_hint"
        android:imeOptions="actionNext"
        android:drawableEnd="@drawable/ic_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/textChildDOB"
        style="@style/editText"
        android:ems="10"
        android:focusableInTouchMode="false"
        android:drawableEnd="@drawable/ic_date"
        android:hint="@string/dob_hit"
        android:inputType="text" />

    <com.example.vaccine_alerter_doctor.util.MultiSpinner
        android:id="@+id/child_vaccine_spinner"
        style="@style/vaccine_spinner"
        android:visibility="visible"
        />

    <Spinner
        android:id="@+id/child_gender"
        android:entries="@array/genders_list"
        style="@style/spinner"
        android:popupBackground="#ffffff"
        android:background="@drawable/spinner_drawable"

       />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/child_spin_kit"
        style="@style/SpinKitView.Large.Wave"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        app:SpinKit_Color="@color/colorAccent" />

    <Button
        android:id="@+id/add_child_btn"
        style="@style/page_button"
        android:imeOptions="actionDone"
        />
</LinearLayout>