<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="@dimen/md_button_inset_horizontal"
    android:background="#ff5445"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editTextInformationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#907886"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/provide_guardian_id"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/text_guardian_id"
            style="@style/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guardian_id_hint"
            android:drawableRight="@drawable/ic_id"
            android:inputType="number" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/guardian_spin_kit"
            style="@style/SpinKitView.Large.Wave"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            app:SpinKit_Color="@color/colorAccent" />

        <TextView
            android:id="@+id/text_guardian_id_alert"
            style="@style/dialog_alert_text" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/add_left_right_margin"
            android:layout_marginEnd="@dimen/add_left_right_margin"
            android:orientation="horizontal"
            android:paddingTop="10dp">

            <Button
                android:id="@+id/guardian_dialog_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:background="@color/white"
                android:text="@string/cancel"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/guardian_dialog_proceed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@color/white"
                android:text="@string/btn_continue"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>