<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:layout_weight="6"
    android:orientation="vertical"
    android:background="@color/sp_white"
    >

    <androidx.cardview.widget.CardView
        style="@style/home_card_view"
        android:id="@+id/home_card_view_1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                style="@style/home_options_image_view"
                android:background="@drawable/ic_check_user"/>
            <RelativeLayout style="@style/home_relative_view">
                <TextView
                    android:id="@+id/home_check"
                    style="@style/home_text_view"
                    android:text="@string/home_check" />

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/home_image_view" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/line_divider" />

    <androidx.cardview.widget.CardView
        style="@style/home_card_view"
        android:id="@+id/home_card_view_2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                style="@style/home_options_image_view"
                android:background="@drawable/ic_add_user"
                android:contentDescription="@string/home_image_desc"/>
            <RelativeLayout style="@style/home_relative_view">
                <TextView
                    style="@style/home_text_view"
                    android:text="@string/home_add_child" />

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/home_image_view" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/line_divider" />

    <androidx.cardview.widget.CardView
        style="@style/home_card_view"
        android:id="@+id/home_card_view_3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                style="@style/home_options_image_view"
                android:background="@drawable/ic_edit_user"
                android:contentDescription="@string/home_image_desc"/>
            <RelativeLayout style="@style/home_relative_view">
                <TextView
                    style="@style/home_text_view"
                    android:text="@string/home_edit_child"/>

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/home_image_view" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/line_divider" />

    <androidx.cardview.widget.CardView
        style="@style/home_card_view"
        android:id="@+id/home_card_view_4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                style="@style/home_options_image_view"
                android:background="@drawable/ic_add_user"
                android:contentDescription="@string/home_image_desc"/>
            <RelativeLayout style="@style/home_relative_view">
                <TextView
                    style="@style/home_text_view"
                    android:text="@string/home_add_guardian"/>

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/home_image_view" />
            </RelativeLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/line_divider" />

    <androidx.cardview.widget.CardView
        style="@style/home_card_view"
        android:id="@+id/home_card_view_5">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal">

            <ImageView
                style="@style/home_options_image_view"
                android:background="@drawable/ic_edit_user"
                android:contentDescription="@string/home_image_desc"/>
            <RelativeLayout style="@style/home_relative_view">
                <TextView
                    style="@style/home_text_view"
                    android:text="@string/home_edit_guardian" />

                <androidx.appcompat.widget.AppCompatImageView
                    style="@style/home_image_view" />
            </RelativeLayout>
        </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/line_divider" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
