<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ff5445"
    android:layout_marginTop="@dimen/md_button_inset_horizontal"
    android:layout_marginBottom="@dimen/md_button_inset_horizontal"
    android:layout_marginRight="8dp"
    android:layout_marginLeft="8dp"
    app:cardCornerRadius="2dp"
    android:orientation="horizontal"
    android:foreground="?attr/selectableItemBackground"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingBottom="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:rowCount="2"
            android:columnCount="4"
            >
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/activity_horizontal_margin"

                >

                <TextView
                    android:id="@+id/hepb1_days"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="@dimen/md_button_inset_horizontal"
                    android:text="Date"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="#0000EE" />

                <TextView
                    android:id="@+id/vaccine_days4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/days"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textColor="#0000EE"
                    tools:text="@string/days"

                    />
            </LinearLayout>


            <View
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="@dimen/cardview_compat_inset_shadow"
                android:layout_height="60dp"
                android:background="#000000"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:alpha="0.12"
                />

            <LinearLayout
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                >

                <TextView
                    android:id="@+id/vaccine_title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="#ff0000"
                    android:textSize="16sp"
                    android:text="@string/hep_b"


                    />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="@dimen/item_margin"

                    >

                    <TextView
                        android:id="@+id/hepb1_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="N/A"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"

                        tools:text="@string/date" />



                </LinearLayout>



            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >
            <View
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:alpha="0.12"
                />


            <TextView
                android:id="@+id/hepb1_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:alpha="0.85"
                android:background="@drawable/rounded_corners"
                android:padding="@dimen/md_simplelistitem_padding_top"
                android:text="Here5"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="#000000"

                tools:text="Status" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>